--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -16,8 +16,8 @@
   /* padding: 2rem; */
   border-radius: 16px;
   width: 500px;
-  margin-top: 0;
-  height: 100lvh;
+  /* margin-top: 0; */
+  height: 100vh;
   /* text-align: center; */
   animation: popIn 0.3s ease;
   /* display: flex;
@@ -35,7 +35,7 @@
   gap: 1rem;
   width: 304px;
   height: 414px;
-  background-color: red;
+  /* background-color: red; */
   margin-left: 75px;
   margin-top: 8px;
   /* justify-content: center; */
@@ -51,8 +51,15 @@
 
 .signup-form1 input {
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid black;
   border-radius: 8px;
+  outline: none;
+}
+.signup-form1 input:user-invalid{
+  border-color: red;
+}
+.signup-form1 input:user-valid{
+  border-color: green;
 }
 
 .submit-btn {
@@ -61,6 +68,14 @@
   background: #2563eb;
   color: white;
   border-radius: 8px;
+  cursor: pointer;
+}
+.signup-form1 button{
+  background-color: black;
+  padding: 10px;
+  border-radius: 8px;
+  color: white;
+  border: none;
   cursor: pointer;
 }
 
