--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -36,6 +36,10 @@
     gap: 10px;
     /* position: relative; */
 }
+.locationWrapper{
+    background-color: red;
+    width: 300px;
+}
 .inputWrapper{
     background-color: #fff;
     width: 376px;
@@ -44,6 +48,7 @@
     padding: 19px;
     display: flex;
     gap: 8px;
+    text-align: center;
 }
 .inputWrapper input{
     width: 200px;
@@ -80,3 +85,27 @@
 .locationWrapper button:hover{
     background-color: rgb(70, 69, 69);
 }
+
+/* @media screen and (max-width: 900px) {
+    .locationBody{
+        background-color: red;
+        width: 500px;
+    }
+    
+    .locationWrapper{
+        width: 600%;
+    }
+    .content{
+        background-color: yellow;
+        width: 300px;
+        padding: 20px;
+        margin: 0 auto;
+    }
+    .content .headerPara{
+        font-size: 20px;
+    }
+    .content p:nth-of-type(2){
+        font-size: 16px;
+        width: 200px;
+    }
+} */
