removed the red backgorund

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -37,7 +37,7 @@
     /* position: relative; */
 }
 .locationWrapper{
-    background-color: red;
+    /* background-color: red; */
     width: 300px;
 }
 .inputWrapper{
